<resources>
    <string name="app_name">Krnt_android_group</string>

    <string name="user_name">用户名称：</string>
    <string name="user_hint">请输入用户名</string>
    <string name="room_name">房间名称：</string>
    <string name="room_hint">请输入房间名</string>
    <string name="enter_room">进入房间</string>

    <string name="menu_set">设置</string>
    <string name="SOCKET_RECEIVER">com.jch.kGroup.SOCKET_RECEIVER</string>

    <!-- Strings related to Settings -->
    <!-- setting -->
    <string name="pref_key_setting_pref">p2p_pref</string>

    <string name="pref_key_miscellaneous_category">miscellaneous</string>
    <string name="pref_title_miscellaneous">Miscellaneous Settings</string>

    <string name="pref_key_host">host</string>
    <!--<string name="pref_default_host">ws://106.120.210.147</string>-->
    <string name="pref_default_host">ws://10.2.11.227</string>
    <string name="pref_title_host">WebSokcet Host</string>
    <string name="pref_title_host_dialog">Enter the host url.</string>

    <string name="pref_key_port">host_port</string>
    <string name="pref_default_port">8443</string>
    <string name="pref_title_port">WebSocket port</string>
    <string name="pref_title_port_dialog">Enter the webSocket url port</string>

    <string name="pref_key_method">host_method</string>
    <string name="pref_default_method">groupcall</string>
    <string name="pref_title_method">WebSocket method</string>
    <string name="pref_title_method_dialog">Enter the webSocket method</string>

    <string name="pref_key_stun"></string>
    <string name="pref_default_stun"></string>
    <string name="pref_title_stun">Stun server</string>
    <string name="pref_title_stun_dialog">Enter the stun server</string>

    <string name="pref_key_report_status">pref_report_status</string>
    <string name="pref_title_report_status">Report PC Status</string>
    <string name="pref_dialog_report_status">Show PC status</string>
    <string name="pref_default_report_status">false</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_key_video_callable">videoCallAble</string>
    <string name="pref_title_video_callable">VideoCallAble</string>

    <string name="pref_key_video_code">Video Code</string>
    <string name="pref_title_video_code">Video Code</string>
    <string name="pref_default_video_code">VP8</string>
    <string name="pref_list_title_video_code">Video Code</string>

    <string name="pref_key_video_frame">Video Frame</string>
    <string name="pref_title_video_frame">Video Frame</string>
    <string name="pref_default_video_frame">default</string>
    <string name="pref_list_title_video_frame">Video Frame</string>


    <string name="pref_key_video_resulotion">Video Resolution</string>
    <string name="pref_title_video_resolution">Video Resolution</string>
    <string name="pref_default_video_resolution_value">640 x 480</string>
    <string name="pref__list_title_video_resolution">Video Resolution</string>

    <string name="pref_maxVideoBitrate_key">maxVideoBitrate_preference</string>
    <string name="pref_maxVideoBitrate_title">maxVideo bitrate setting.</string>
    <string name="pref_maxVideoBitrate_dlg">max Video bitrate setting.</string>
    <string name="pref_maxVideoBitrate_default">Default</string>

    <string name="pref_maxVideoBitratevalue_key">maxVideoBitratevalue_preference</string>
    <string name="pref_maxVideoBitratevalue_title">Video codec bitrate.</string>
    <string name="pref_maxVideoBitratevalue_dlg">Enter Video codec bitrate in kbps.</string>
    <string name="pref_maxVideoBitratevalue_default">1000</string>

    <string name="pref_audio_setting">Audio Setting</string>

    <string name="pref_maxAudiobitrate_key">maxAudiobitrate_preference</string>
    <string name="pref_MaxAudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_maxAudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_maxAudiobitrate_default">Default</string>

    <string name="pref_maxAudiobitratevalue_key">maxAudiobitratevalue_preference</string>
    <string name="pref_maxAudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_maxAudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_maxAudiobitratevalue_default">32</string>

    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">opus</string>

    <string name="pref_audioprocessing_key">audioprocessing_preference</string>
    <string name="pref_audioprocessing_title">Disable audio processing.</string>
    <string name="pref_audioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_audioprocessing_default">false</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="refresh">重连</string>
    <string name="title_activity_play">PlayActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
